[package]
name = "rust-actix-web-api"
version = "0.1.0"
authors = ["maxgramf3@gmail.com <maxgramf3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
futures = "0.1.29"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

